# sivage-aempire

./: .gitignore  README.md  build.gradle  gradle.properties
.github/workflows/: build.yml
src/main/java/dev/kleinbox/sivage/: Config.java  LuckPermsImageLimits.java  Sivage.java  SivagePermissions.java
src/main/java/dev/kleinbox/sivage/command/: CheckSignatureCommand.java  GetItemCommand.java  ImageAdminCommand.java
src/main/java/dev/kleinbox/sivage/image/: ImagePreparationException.java  ImageProvider.java  Imaging.java
src/main/java/dev/kleinbox/sivage/item/: ImageItem.java  ImageMetaData.java
src/main/java/dev/kleinbox/sivage/mixin/: ItemFrameMixin.java  ServerGamePacketListenerImplMixin.java
src/main/java/dev/kleinbox/sivage/packet/: C2SCustomActionEvent.java  ImageDialogs.java  LinkVerifier.java
src/main/resources/: fabric.mod.json  imaging.wasm  sivage.accesswidener  sivage.mixins.json
src/main/resources/assets/sivage/lang/: de_de.json  en_us.json
src/main/resources/data/sivage/dialog/: blocked.json  exception.json  failed_file.json  failed_link.json  new.json  prepare.json  too_large.json
src/main/resources/data/sivage/recipe/: custom_image.json
src/main/rust/: Cargo.toml
src/main/rust/src/: imaging.rs  lib.rs  palette.rs
